# wupper

./: README.md
WupperCodeGenScripts/: registers-1.0.yaml
documentation/: customizing.tex  design.tex  introduction.tex  obtaining.tex  pcie_dma_core.tex  registermap.tex  registers-1.0.html  regmap.tex  simulation.tex  testing.tex  titlepage.tex  versionhistory.tex  wupper.tex  xilinx_core.tex
documentation/example_application/: wupper.tex
documentation/pictures/: dma_core_structure.odg
firmware/constraints/: pcie_dma_top_HTG710.xdc  pcie_dma_top_VC709.xdc  pcie_dma_top_kcu105.xdc
firmware/scripts/Wupper/: do_implementation_HTG710.tcl  do_implementation_KCU105.tcl  do_implementation_VC709.tcl  vivado_import.tcl  vivado_import_kintexultrascale.tcl  vivado_import_virtex7.tcl
firmware/scripts/pcie_dma_top/: do_implementation.tcl  vivado_import.tcl  vivado_import_VC709.tcl  vivado_import_htg710.tcl
firmware/simulation/Wupper/: VSim_Functional.tcl  project.do  start.do  wave.do
firmware/simulation/pcie_dma_top/: project.do  start.do  wave.do
hostSoftware/driver/: README  cleandrivers  makedrivers
hostSoftware/wupper_gui/: Wupper_gui.pro  chain-test.cpp  chaintest-thread.h  measure-throughput.cpp  throughput-thread.h  wupper_gui.cpp  wupper_gui.h
hostSoftware/wupper_tools/: CMakeLists.txt  cmem.c  dma.c  irq.c  registers.c  wupper-chaintest.c  wupper-config.c  wupper-dma-test.cpp  wupper-dma-transfer.c  wupper-info.c  wupper-irq-test.c  wupper-reset.c  wupper-throughput.c  wupper-write.c  wupper.c  wupper.h
software/wupper_tools/: CMakeLists.txt
(+49 files in other folders)
